adding new publication (cepal guidelines)

--- a/www/research.html
+++ b/www/research.html
@@ -582,6 +582,31 @@ extremos, por lo menos desde el año 2000.</p>
 <div id="guidelines-and-reports" class="section level3">
 <h3>Guidelines and reports</h3>
 <a
+href="https://www.cepal.org/es/publicaciones/81192-medicion-la-desigualdad-mediante-la-integracion-fuentes-datos"><strong>Medición
+de la desigualdad mediante la integración de fuentes de
+datos</strong></a> <br> Facundo Alvaredo, Mauricio De Rosa, Ignacio
+Flores and Marc Morgan <br> in <em>Documentos de Proyectos CEPAL</em>
+<br> <button data-toggle="collapse" data-target="#cepal_gui"> +
+Abstract</button>
+<div id="cepal_gui" class="collapse">
+<p>En este documento se presentan los principios fundamentales de las
+cuentas nacionales distributivas y su aplicación práctica en el contexto
+de la información disponible en los países de América Latina. La
+metodología propuesta representa un esfuerzo significativo por mejorar
+las prácticas actuales, proporcionando mediciones de la desigualdad del
+ingreso que complementan las que se obtienen a través de las encuestas
+de hogares. Dadas las limitaciones inherentes a la información
+disponible, esta metodología debe considerarse como una estrategia en
+evolución cuya aplicación debe llevarse adelante con un enfoque crítico
+y reflexivo. Este trabajo es el resultado del proceso de colaboración
+entre la Comisión Económica para América Latina y el Caribe (CEPAL) y
+World Inequality Lab, con el apoyo del proyecto “Innovative approaches
+for examining inequality through integration of different data sources
+in Latin America and the Caribbean” del decimotercer tramo de la Cuenta
+de las Naciones Unidas para el Desarrollo..</p>
+</div>
+<p><br></p>
+<a
 href="https://www.cepal.org/es/publicaciones/48242-desigualdad-ingreso-la-republica-dominicana-2012-2019-revision-partir-la"><strong>Estadísticas
 distributivas en República Dominicana: una revisión a partir de la
 combinación de fuentes</strong></a> <br> Facundo Alvaredo, Mauricio De
