add new publication

--- a/www/research.html
+++ b/www/research.html
@@ -295,21 +295,13 @@ $(document).ready(function () {
 
 
 <p><br> <br></p>
-<div id="work-in-progress" class="section level3">
-<h3>Work in progress</h3>
-<p><strong>Land Inequality and Biological Diversity in the United
-States</strong> <br> Ignacio Flores and Dylan Glover <br> <br></p>
-<p><strong>From Housing Gains to Pension Losses: New Methods to Reveal
-Wealth Inequality Dynamics in Chile</strong> <br> Bastián Castro Nofal,
-Ignacio Flores and Pablo Gutierrez Cubillos <br> <br></p>
-</div>
 <div id="working-papers" class="section level3">
 <h3>Working papers</h3>
 <a
 href="https://ignacioflores.com/pdf/land-inequality-from-the-sky-wp.pdf"><strong>Does
 Land Consolidation Increase Vulnerability to Climate Change? Evidence
 from French Agriculture</strong></a> <br> Ignacio Flores and Dylan
-Glover <br> in Working Paper (Oct 2024) <br>
+Glover <br> in Working Paper (Jan 2025) <br>
 <button data-toggle="collapse" data-target="#gmpqje"> + Abstract,
 </button> <a
 href="https://ignacioflores.com/pdf/land-inequality-from-the-sky-wp.pdf">Working
@@ -327,11 +319,41 @@ This implies a trade-off between productivity and resilience, which
 becomes critical as heat-shocks grow stronger and more frequent.</p>
 </div>
 <p><br></p>
+<a
+href="https://ignacioflores.com/pdf/from-housing-gains.pdf"><strong>From
+Housing Gains to Pension Losses: New Methods to Reveal Wealth Inequality
+Dynamics in Chile</strong></a> <br> Bastián Castro Nofal, Ignacio Flores
+and Pablo Gutierrez Cubillos <br> submitted to <em>Journal of Public
+Economics</em> (March 2025) <br>
+<button data-toggle="collapse" data-target="#fromhous"> + Abstract,
+</button> <a
+href="https://ignacioflores.com/pdf/from-housing-gains.pdf">Working
+Paper</a>
+<div id="fromhous" class="collapse">
+<p>This paper examines wealth inequality dynamics in Chile from 2007 to
+2021, focusing on two key macroeconomic events: the sharp rise in
+housing prices after the introduction of a real estate value-added tax
+in 2016 and the substantial liquidation of pension assets through early
+withdrawals during the pandemic. We introduce a methodological
+innovation that aims to improve the measurement of wealth inequality by
+integrating administrative pension fund records into household wealth
+surveys using machine learning techniques. Our results reveal extreme
+levels of wealth concentration, with the top 10% holding approximately
+two-thirds of national private wealth. However, inequality slightly
+declined over the period, particularly after 2016, as the outcome of two
+opposing forces: housing appreciation, which benefited middle-class
+households, and pension fund withdrawals, which disproportionately
+reduced wealth at the lower end of the distribution.</p>
+</div>
+<p><br></p>
+</div>
+<div id="publications-in-academic-journals" class="section level3">
+<h3>Publications in academic journals</h3>
 <a href="pdf/the-inequality-we-measure.pdf"><strong>The Inequality (or
 the Growth) we Measure: Data Gaps and the Distribution of
 Incomes</strong></a><br> Facundo Alvaredo, Mauricio De Rosa, Ignacio
-Flores and Marc Morgan <br> in <em>Stone Center Working Paper
-Series</em> (2022), R&amp;R at <em>Economía, LACEA Journal</em>
+Flores and Marc Morgan <br>, <em>forthcoming</em> in <em>Economía, LACEA
+Journal</em>
 <br><button data-toggle="collapse" data-target="#growth_we_measure"> +
 Abstract, </button> <a
 href="https://osf.io/preprints/socarxiv/fs5jn/">Working Paper</a>
@@ -355,59 +377,55 @@ and different shapes. We discuss the degree to which inequality levels
 and trends could be affected.</p>
 </div>
 <p><br></p>
+<a
+href="https://academic.oup.com/ooec/article-pdf/4/Supplement_1/i36/62208611/odae036.pdf"><strong>Wealth
+inequality in Latin America (2000–2020): data, facts and
+conjectures</strong></a><br> Rafael Carranza, Mauricio De Rosa and
+Ignacio Flores <br> in <em>Oxford Open Economics</em>, Volume 4, Issue
+Supplement_1, 2025, Pages i36–i54
+<br><button data-toggle="collapse" data-target="#wealth_ineq"> +
+Abstract,</button> <a
+href="https://github.com/ignacio-flores/lacir-wealth">Replication</a>
+<div id="wealth_ineq" class="collapse">
+<p>How has wealth accumulated in Latin America and how is it distributed
+across households? Despite the region being widely recognized for its
+extreme income inequality, data on wealth are scarce, partial and often
+contradictory, making it difficult to answer these basic questions. We
+estimate wealth aggregates based on macroeconomic data and wealth
+inequality based on recently available surveys and on administrative
+data. We contrast our results with those in the literature, with a
+handful of estimates from administrative sources, and with estimates
+from Credit Suisse and wid.world. In considering all the evidence, we
+distinguish reliable facts from what can only be conjectured or
+speculated. We find that aggregate wealth increased over two decades in
+four countries, and that wealth inequality is extremely high where it
+can be measured (with a top 1% share of up to 40%), which is likely to
+be the case for the whole region.</p>
 </div>
-<div id="publications-in-academic-journals" class="section level3">
-<h3>Publications in academic journals</h3>
-<a href="http://eprints.lse.ac.uk/122760/"><strong>Firms and inequality
-in Latin America</strong></a><br> Marcela Eslava, Marcela Meléndez,
-Gabriel Ulyssea, Nicolás Urdaneta and Ignacio Flores <br> in <em>Oxford
-Open Economics</em>, forthcoming (2024)
+<p><br></p>
+<a
+href="https://academic.oup.com/ooec/article-pdf/4/Supplement_1/i334/62208598/odae031.pdf"><strong>Businesses
+and inequality in Latin America</strong></a><br> Marcela Eslava, Marcela
+Meléndez, Gabriel Ulyssea, Nicolás Urdaneta and Ignacio Flores <br> in
+<em>Oxford Open Economics</em>, Volume 4, Issue Supplement_1, 2025,
+Pages i334–i348
 <br><button data-toggle="collapse" data-target="#firms_ineq"> +
 Abstract,</button>
 <div id="firms_ineq" class="collapse">
-<p>The relationship between firms and inequality has been a focus of
-recent attention globally. This chapter summarizes basic facts about
-this relationship for Latin America. Unlike advanced economies where
-superstar firm growth has prompted concerns over disproportionate income
-growth at the top, the facts we summarize illustrate that the main
-concern for Latin America is the extreme prevalence of tiny businesses
+<p>The relationship between businesses and inequality has been a focus
+of recent attention globally. This chapter summarizes basic facts about
+this relationship in Latin America (LATAM). Unlike advanced economies
+where superstar firm growth has prompted concerns over disproportionate
+income growth at the top, the facts we summarize illustrate that the
+main concern for LATAM is the extreme prevalence of tiny businesses
 whose workers and owners tend to populate the bottom income segments.
 The empirical likelihood that these businesses improve their
 productivity and grow to hire more workers and pay better wages is also
 very low. The region displays a deficit of employment generation in
-SMEs, by contrast to both microbusinesses (including self-employment)
-and large corporations. While the former tend to remunerate both workers
-and owners with very low incomes, the latter pay high wages but also
-exhibit low labor shares.</p>
-</div>
-<p><br></p>
-<a href="http://eprints.lse.ac.uk/119426/"><strong>Wealth Inequality in
-Latin America</strong></a><br> Rafael Carranza, Mauricio De Rosa and
-Ignacio Flores <br> in <em>Oxford Open Economics</em>, forthcoming
-(2024) <br><button data-toggle="collapse" data-target="#wealth_ineq"> +
-Abstract,</button> <a
-href="https://github.com/ignacio-flores/lacir-wealth">Replication</a>
-<div id="wealth_ineq" class="collapse">
-<p>How much wealth has accumulated in the region and how is it
-distributed across households? Despite being widely recognized for its
-extreme income inequality, reliable data on wealth is scarce, partial
-and oftentimes contradictory, making it difficult to answer these basic
-questions. In this study, we estimate aggregates based on macroeconomic
-data, and inequality based on recently available surveys. We contrast
-our results with the literature, with a handful of state-of-the-art
-estimates from administrative sources, and with more available but
-extrapolated estimates from Credit Suisse and wid.world. Considering all
-the evidence, we distinguish reliable facts from what can only be
-conjectured or speculated. We find that aggregate wealth increased over
-two decades in four countries, now ranging close to 3.5 the national
-income for market value estimates and 5-6 times at book values. We also
-find that wealth inequality is amongst the highest in the world were it
-can be measured. Given data limitations, one can only speculate about
-aggregates in opaque countries and about inequality trends in any
-country in the region. Although recent research in the developed world
-has focused in combining data sources to better understand wealth, the
-region lags behind and urgently requires more and better public
-information.</p>
+small and medium enterprises, by contrast to both micro businesses
+(including self-employment) and large corporations. While the former
+tend to remunerate both workers and owners with very low incomes, the
+latter pay high wages but exhibit low labor shares.</p>
 </div>
 <p><br></p>
 <a
