--- a/www/research.html
+++ b/www/research.html
@@ -352,8 +352,8 @@ reduced wealth at the lower end of the distribution.</p>
 <a href="pdf/the-inequality-we-measure.pdf"><strong>The Inequality (or
 the Growth) we Measure: Data Gaps and the Distribution of
 Incomes</strong></a><br> Facundo Alvaredo, Mauricio De Rosa, Ignacio
-Flores and Marc Morgan <br>, <em>forthcoming</em> in <em>Economía, LACEA
-Journal</em>
+Flores and Marc Morgan <br> in <em>Economía, LACEA Journal</em>
+(<em>forthcoming</em>)
 <br><button data-toggle="collapse" data-target="#growth_we_measure"> +
 Abstract, </button> <a
 href="https://osf.io/preprints/socarxiv/fs5jn/">Working Paper</a>
